--- a/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,13 +13,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="370.0" prefWidth="519.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
+<AnchorPane prefHeight="328.0" prefWidth="519.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
    <children>
 
                   <!-- Image & Form Details Row -->
-      <HBox layoutX="30.0" layoutY="42.0" prefHeight="242.0" prefWidth="219.0" styleClass="image-holder">
+      <HBox layoutX="30.0" layoutY="39.0" prefHeight="214.0" prefWidth="219.0" styleClass="image-holder">
          <children>
-            <GridPane prefHeight="241.0" prefWidth="204.0" styleClass="image-holder">
+            <GridPane prefHeight="220.0" prefWidth="204.0" styleClass="image-holder">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                </columnConstraints>
@@ -34,7 +33,7 @@
          </children></HBox>
 
       <!-- Container with rounded corners -->
-      <VBox layoutX="30.0" layoutY="299.0" prefHeight="34.0" prefWidth="219.0" spacing="20">
+      <VBox layoutX="30.0" layoutY="264.0" prefHeight="34.0" prefWidth="219.0" spacing="20">
          <children>
       
             <!-- Bottom Bar -->
@@ -53,7 +52,7 @@
       </VBox>
 
       <!-- Details Column -->
-      <VBox layoutX="269.0" layoutY="42.0" prefHeight="174.0" prefWidth="218.0" spacing="10">
+      <VBox layoutX="271.0" layoutY="57.0" prefHeight="174.0" prefWidth="218.0" spacing="10">
          <children>
             <Text styleClass="title-text" text="CLOTHES DETAILS" wrappingWidth="189.06451416015625">
                <font>
@@ -64,19 +63,19 @@
             <!-- Category -->
             <HBox prefHeight="21.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="CATEGORY:" />
-               <ComboBox fx:id="categoryDropdown" prefWidth="150.0" promptText="Select Category" />
+               <ComboBox fx:id="categoryDropdown" prefWidth="150.0" promptText="Select Category" styleClass="image-holder" />
             </HBox>
 
             <!-- Style -->
             <HBox prefHeight="22.0" prefWidth="238.0" spacing="10">
                <Text styleClass="text-filter" text="STYLE:" wrappingWidth="76.5501708984375" />
-               <ComboBox fx:id="styleDropdown" prefWidth="150.0" promptText="Select Style" />
+               <ComboBox fx:id="styleDropdown" prefWidth="150.0" promptText="Select Style" styleClass="image-holder" />
             </HBox>
 
             <!-- Color -->
             <HBox prefHeight="19.0" prefWidth="218.0" spacing="10">
                <Text styleClass="text-filter" text="COLOR:" wrappingWidth="76.4595947265625" />
-               <ComboBox fx:id="colorDropdown" prefWidth="150.0" promptText="Select Color" />
+               <ComboBox fx:id="colorDropdown" prefWidth="150.0" promptText="Select Color" styleClass="image-holder" />
             </HBox>
 
             <!-- Size -->
@@ -87,36 +86,7 @@
 
          </children>
       </VBox>
-      <GridPane layoutX="263.0" layoutY="251.0" prefHeight="95.0" prefWidth="78.0" styleClass="image-holder">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <Button layoutX="502.0" layoutY="27.0" mnemonicParsing="false" styleClass="close-button" text="X" />
-      <Label layoutX="271.0" layoutY="225.0" prefHeight="11.0" prefWidth="61.0" text="PREVIEW" textAlignment="CENTER">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </Label>
-      <GridPane layoutX="351.0" layoutY="251.0" prefHeight="95.0" prefWidth="78.0" styleClass="image-holder">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-      </GridPane>
-      <GridPane layoutX="438.0" layoutY="251.0" prefHeight="95.0" prefWidth="78.0" styleClass="image-holder">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-      </GridPane>
-      <Button fx:id="SaveItemInfoBtn" layoutX="476.0" layoutY="358.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" styleClass="save-button" text="save" />
+      <Button fx:id="closeButton" layoutX="475.0" layoutY="26.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="close-button" text="X" />
+      <Button fx:id="SaveItemInfoBtn" layoutX="440.0" layoutY="267.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" styleClass="save-button" text="save" />
    </children>
 </AnchorPane>
