--- a/src/main/resources/com/example/pilifitproject/styles/Home.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Home.css
@@ -39,7 +39,7 @@
     -fx-border-width: 2px;
     -fx-background-radius: 15;
     -fx-padding: 5 10;
-    -fx-font-size: 8px;
+    -fx-font-size: 11px;
     -fx-cursor: hand;
     -fx-box-shadow: 5px 10px;
 }
@@ -87,14 +87,36 @@
     -fx-text-fill: white;
     -fx-cursor: hand;
     -fx-background-color: #161718;
-    -fx-text-fill: #ab0808;
+    -fx-text-fill: white;
     -fx-border-radius: 5px;
     -fx-background-radius: 5px;
-    -fx-pref-width: 120px;
-    -fx-pref-height: 150px;
+    -fx-pref-width: 124px;
+    -fx-pref-height: 130px;
 }
 
 .add-item:hover {
     -fx-text-fill: #ffffff55;
 }
 
+.closet-collections {
+    -fx-background-color:  rgba(0, 0, 0, 0, 0.1)    ;
+    -fx-text-fill: white;
+    -fx-cursor: hand;
+    -fx-text-fill: white;
+    -fx-border-radius: 15px;
+    -fx-background-radius: 15px;
+    -fx-pref-width: 165px;
+    -fx-pref-height: 60px;
+}
+
+.closet-collections:hover {
+    -fx-text-fill: #ffffff55;
+}
+
+.grid-cell {
+    -fx-pref-width: 124.0;
+    -fx-pref-height: 150.0;
+    -fx-background-color: #f8f8f8;
+    -fx-border-color: #cccccc;
+    -fx-border-width: 1;
+}
