--- a/src/main/resources/com/example/pilifitproject/styles/ItemDisplay.css
+++ b/src/main/resources/com/example/pilifitproject/styles/ItemDisplay.css
@@ -12,13 +12,33 @@
     -fx-border-radius: 8;
     -fx-border-width: 2px;
     -fx-background-radius: 8;
-    -fx-padding: 5 10;
-    -fx-font-size: 20px;
+    -fx-padding: 1 7;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
+    -fx-pref-width: 33px;
+    -fx-pref-height: 25px;
+}
+
+.view-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-radius: 8;
+    -fx-border-width: 2px;
+    -fx-background-radius: 8;
+    -fx-padding: 1 7;
+    -fx-font-size: 15px;
     -fx-cursor: hand;
 }
+
+.view-button:hover {
+    -fx-background-color: #e0e0e0; /* light gray */
+    -fx-border-color: transparent; /* #bobobo*/
+}
+
+
 .name-button {
     -fx-background-color: transparent;
-    -fx-font-size: 15px;
+    -fx-font-size: 10px;
     -fx-cursor: hand;
 
 }
