--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -43,7 +42,7 @@
                   <Button fx:id="AboutController" mnemonicParsing="false" onAction="#goAbout" prefHeight="26.0" prefWidth="126.0" styleClass="scene-switch" text="ABOUT" GridPane.columnIndex="1" />
                </children>
             </GridPane>
-            <Button fx:id="closetButton" alignment="CENTER" layoutX="629.0" layoutY="196.0" mnemonicParsing="false" onAction="#goCloset" styleClass="add-item" text="CLOSET">
+            <Button fx:id="closetButton" alignment="CENTER" layoutX="555.0" layoutY="194.0" mnemonicParsing="false" onAction="#goCloset" styleClass="closet-collections" text="CLOSET">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -63,15 +62,15 @@
                      </stops>
                   </RadialGradient>
                </textFill></Button>
-            <Button layoutX="713.0" layoutY="137.0" mnemonicParsing="false" prefWidth="143.0" styleClass="icon-button" text="GENERATE">
+            <Button layoutX="723.0" layoutY="143.0" mnemonicParsing="false" prefWidth="143.0" styleClass="icon-button" text="GENERATE">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font></Button>
-            <Label layoutX="674.0" layoutY="44.0" prefHeight="73.0" prefWidth="287.0" text="PILIFIT" textFill="WHITE">
+            <Label layoutX="666.0" layoutY="57.0" prefHeight="91.0" prefWidth="261.0" text="PILIFIT" textFill="WHITE">
                <font>
-                  <Font name="MS UI Gothic" size="79.0" />
+                  <Font name="Arial" size="79.0" />
                </font></Label>
-            <Button fx:id="collectionsButton" alignment="CENTER" layoutX="824.0" layoutY="194.0" mnemonicParsing="false" onAction="#goCollection" styleClass="add-item" text="COLLECTIONS" textFill="WHITE">
+            <Button fx:id="collectionsButton" alignment="CENTER" layoutX="868.0" layoutY="194.0" mnemonicParsing="false" onAction="#goCollection" style="-fx-background-color: rgba(0, 0, 0, 0, 0.1);" styleClass="closet-collections" text="COLLECTIONS" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -82,71 +81,57 @@
    <right>
       <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
          <children>
-               <GridPane fx:id="itemsGridPane" layoutX="101.0" layoutY="76.0" prefHeight="364.0" prefWidth="736.0">
-                   <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.4000244140625" minWidth="10.0" prefWidth="132.4000244140625" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.4000244140625" minWidth="10.0" prefWidth="132.4000244140625" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.4000244140625" minWidth="10.0" prefWidth="132.4000244140625" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.4000244140625" minWidth="10.0" prefWidth="132.4000244140625" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.4000244140625" minWidth="10.0" prefWidth="132.4000244140625" />
-                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="121.20001220703125" minWidth="10.0" prefWidth="119.5999755859375" />
-                   </columnConstraints>
-                   <rowConstraints>
-                       <RowConstraints maxHeight="109.6000244140625" minHeight="10.0" prefHeight="92.7999755859375" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="127.19998779296874" minHeight="0.0" prefHeight="96.00002441406251" vgrow="SOMETIMES" />
-                       <RowConstraints maxHeight="161.60001220703126" minHeight="10.0" prefHeight="81.60003662109375" vgrow="SOMETIMES" />
-                   </rowConstraints>
-                   <children>
-                       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#161718" height="100.0" stroke="BLACK" strokeType="INSIDE" width="124.0" />
-                  <Button fx:id="Addnew" mnemonicParsing="false" onAction="#openUploadDialog" prefHeight="93.0" prefWidth="124.0" styleClass="add-item" text="+" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="44.0" />
-                     </font>
-                  </Button>
-                       <Label alignment="BOTTOM_CENTER" contentDisplay="CENTER" prefHeight="91.0" prefWidth="124.0" text="ADD NEW PIECE" textAlignment="CENTER" textFill="WHITE">
+            <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="99.0" layoutY="67.0" prefHeight="480.0" prefWidth="854.0">
+               <content>
+                     <GridPane id="upload/itemsgridpane" fx:id="itemsGridPane" gridLinesVisible="true" hgap="15.0" prefHeight="462.0" prefWidth="851.0" styleClass="grid-cell" vgap="10.0">
+                         <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                             <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                             <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
+                         </columnConstraints>
+                         <rowConstraints>
+                             <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                             <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                             <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="SOMETIMES" />
+                         </rowConstraints>
+                         <children>
+                             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#161718" height="150.0" stroke="BLACK" strokeType="INSIDE" width="124.0" />
+                        <Button fx:id="Addnew" mnemonicParsing="false" onAction="#openUploadDialog" prefHeight="150.0" prefWidth="124.0" styleClass="add-item" text="+" textFill="WHITE">
                            <font>
-                               <Font name="System Bold" size="9.0" />
+                              <Font name="System Bold" size="51.0" />
                            </font>
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                       </Label>
-                  <Button fx:id="addnew" mnemonicParsing="false" onAction="#openUploadDialog" prefHeight="107.0" prefWidth="136.0" styleClass="add-item" text="+" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="51.0" />
-                     </font>
-                  </Button>
-                   </children>
-               </GridPane>
-               <Slider layoutX="49.0" layoutY="91.0" orientation="VERTICAL" prefHeight="231.0" prefWidth="26.0">
-                   <styleClass>
-                       <String fx:value="black-slider" />
-                       <String fx:value="thumb" />
-                       <String fx:value="track" />
-                       <String fx:value="axis" />
-                   </styleClass>
-               </Slider>
-            <GridPane layoutX="-6.0" layoutY="30.0" prefHeight="30.0" prefWidth="1573.0">
+                        </Button>
+                         </children>
+                     <padding>
+                        <Insets bottom="5.0" left="10.0" right="20.0" top="5.0" />
+                     </padding>
+                     </GridPane>
+               </content>
+            </ScrollPane>
+            <GridPane id="filtergridpane" layoutX="-6.0" layoutY="10.0" prefHeight="30.0" prefWidth="1587.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <MenuButton fx:id="styleDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="STYLE" GridPane.columnIndex="4" />
-                  <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="CATEGORY" GridPane.columnIndex="3" />
-                  <MenuButton fx:id="colorDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="COLOR" GridPane.columnIndex="5" />
-                  <Button mnemonicParsing="false" onAction="#goFavorites" prefHeight="34.0" prefWidth="149.0" styleClass="drop-select" text="FAVORITES" GridPane.columnIndex="6" />
+                  <MenuButton fx:id="styleDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="STYLE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="CATEGORY" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <MenuButton fx:id="colorDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="COLOR" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" onAction="#goFavorites" prefHeight="34.0" prefWidth="149.0" styleClass="drop-select" text="FAVORITES" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                </children>
             </GridPane>
          </children>
