--- a/src/main/resources/com/example/pilifitproject/styles/Home.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Home.css
@@ -120,3 +120,19 @@
     -fx-border-color: #cccccc;
     -fx-border-width: 1;
 }
+
+.nav-label {
+    -fx-underline: false;
+    -fx-cursor: hand;
+    -fx-effect: dropshadow(gaussian, white, 8, 0.5, 0, 0);
+}
+
+.nav-label:hover {
+    -fx-underline: true;
+}
+
+.nav-label.active {
+    -fx-underline: true;
+    -fx-effect: dropshadow(gaussian, white, 15, 0.8, 0, 0);
+}
+
