--- a/src/main/resources/com/example/pilifitproject/view/Generate2.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Generate2.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,11 +8,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="552.0" prefWidth="802.0" stylesheets="@../styles/Generate2.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.view.Generate2">
+<AnchorPane prefHeight="476.0" prefWidth="380.0" stylesheets="@../styles/Generate2.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
    <children>
-      <Pane layoutX="409.0" layoutY="11.0" prefHeight="529.0" prefWidth="379.0">
+      <Pane layoutY="2.0" prefHeight="470.0" prefWidth="380.0" stylesheets="@../styles/Generate2.css">
          <children>
-            <GridPane prefHeight="529.0" prefWidth="379.0">
+            <GridPane gridLinesVisible="true" layoutY="-2.0" prefHeight="475.0" prefWidth="379.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="153.0" />
@@ -21,19 +20,19 @@
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="157.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="166.0" minHeight="0.0" prefHeight="137.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="104.0" minHeight="10.0" prefHeight="91.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="68.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="205.0" minHeight="10.0" prefHeight="135.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="202.0" minHeight="0.0" prefHeight="140.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="158.0" minHeight="10.0" prefHeight="146.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="68.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="160.0" fitWidth="155.0" layoutX="10.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="140.0" fitWidth="156.0" layoutX="10.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                  <ImageView fitHeight="138.0" fitWidth="151.0" layoutX="10.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="139.0" fitWidth="154.0" layoutX="10.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                   <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="98.0" fitWidth="153.0" layoutX="10.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" styleClass="icon-button" text="SAVE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+                  <ImageView fitHeight="140.0" fitWidth="150.0" layoutX="10.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <Button mnemonicParsing="false" styleClass="icon-button" text="SAVE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
                   <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" styleClass="icon-button" text="X" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.valignment="BASELINE" />
                   <Button layoutX="300.0" layoutY="459.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
                   <Button layoutX="263.0" layoutY="357.0" mnemonicParsing="false" styleClass="icon-button" text="&gt;" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
@@ -41,41 +40,9 @@
                   <Button layoutX="314.0" layoutY="152.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
                   <Button layoutX="10.0" layoutY="152.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                   <Button layoutX="10.0" layoutY="255.0" mnemonicParsing="false" styleClass="icon-button" text="&lt;" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" styleClass="icon-button" text="GENERATE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <Button mnemonicParsing="false" styleClass="icon-button" text="🔁" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
-         </children>
-      </Pane>
-      <Pane layoutX="14.0" layoutY="42.0" prefHeight="467.0" prefWidth="386.0">
-         <children>
-            <GridPane layoutX="32.0" layoutY="16.0" prefHeight="438.0" prefWidth="347.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <ImageView fitHeight="105.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="136.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="10.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="131.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="10.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="131.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="252.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="10.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="131.0" layoutY="342.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                  <ImageView fitHeight="105.0" fitWidth="111.0" layoutX="129.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-               </children>
-            </GridPane>
-            <ScrollBar layoutX="11.0" layoutY="110.0" opacity="0.55" orientation="VERTICAL" prefHeight="249.0" prefWidth="14.0" />
          </children>
       </Pane>
    </children>
