--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
@@ -63,10 +65,6 @@
                      </stops>
                   </RadialGradient>
                </textFill></Button>
-            <Button layoutX="723.0" layoutY="143.0" mnemonicParsing="false" prefWidth="143.0" styleClass="icon-button" text="✨ GENERATE">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font></Button>
             <Label layoutX="666.0" layoutY="57.0" prefHeight="91.0" prefWidth="261.0" text="PILIFIT" textFill="WHITE">
                <font>
                   <Font name="Arial" size="79.0" />
@@ -135,7 +133,69 @@
                   <Button mnemonicParsing="false" onAction="#goFavorites" prefHeight="34.0" prefWidth="149.0" styleClass="drop-select" text="FAVORITES" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                </children>
             </GridPane>
-            <VBox layoutX="1187.0" layoutY="-4.0" prefHeight="562.0" prefWidth="391.0" />
+            <VBox fx:id="generateSidebar" layoutX="1000.0" layoutY="-4.0" prefHeight="562.0" prefWidth="578.0">
+               <children>
+                  <AnchorPane fx:id="GenerateAnchor" prefHeight="578.0" prefWidth="578.0">
+                     <children>
+                        <Pane fx:id="generatePane" layoutX="86.0" layoutY="32.0" prefHeight="553.0" prefWidth="417.0">
+                           <children>
+                              <GridPane gridLinesVisible="true" layoutX="78.0" layoutY="69.0" prefHeight="400.0" prefWidth="281.0">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="ALWAYS" />
+                                    <RowConstraints maxHeight="150.0" minHeight="150.0" percentHeight="0.0" prefHeight="150.0" vgrow="ALWAYS" />
+                                    <RowConstraints maxHeight="148.0" minHeight="148.0" percentHeight="0.0" prefHeight="148.0" vgrow="ALWAYS" />
+                                 </rowConstraints>
+                                 <children>
+                                    <ImageView fx:id="topImageContainer" fitHeight="149.0" fitWidth="158.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" />
+                                    <ImageView fx:id="bottomImageContainer" fitHeight="149.0" fitWidth="158.0" layoutX="121.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                                    <ImageView fx:id="shoesImageContainer" fitHeight="122.0" fitWidth="158.0" layoutX="121.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                                    <Button fx:id="leftTop" mnemonicParsing="false" rotate="180.0" text="➤" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="leftBottom" mnemonicParsing="false" rotate="180.0" text="➤" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="leftShoes" mnemonicParsing="false" rotate="180.0" text="➤" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="rightTop" mnemonicParsing="false" text="➤" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="rightBottom" layoutX="338.0" layoutY="101.0" mnemonicParsing="false" text="➤" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="rightShoes" layoutX="338.0" layoutY="250.0" mnemonicParsing="false" text="➤" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </GridPane>
+                              <Button fx:id="generateRandomFit" layoutX="180.0" layoutY="1.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="101.0" text="generate" />
+                              <Button layoutX="199.0" layoutY="528.0" mnemonicParsing="false" prefWidth="44.0" text="SAVE" />
+                           </children>
+                        </Pane>
+                     </children>
+                     <stylesheets>
+                        <URL value="@../styles/Generate2.css" />
+                        <URL value="@../styles/Home.css" />
+                     </stylesheets>
+                  </AnchorPane>
+               </children>
+            </VBox>
          </children>
       </AnchorPane>
    </right>
