--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -3,16 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.RadialGradient?>
@@ -78,88 +75,25 @@
    <center>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="158.0" layoutY="63.0" prefHeight="480.0" prefWidth="1275.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" prefHeight="480.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" prefWidth="1270.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" vgap="10.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="300.0" percentWidth="0.0" prefWidth="124.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="300.0" minWidth="300.0" percentWidth="0.0" prefWidth="300.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="300.0" minWidth="300.0" percentWidth="0.0" prefWidth="300.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="300.0" minWidth="300.0" percentWidth="0.0" prefWidth="300.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="261.0" minWidth="261.0" percentWidth="0.0" prefWidth="261.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints maxHeight="375.0" minHeight="375.0" percentHeight="0.0" prefHeight="375.0" vgrow="SOMETIMES" />
-                                <RowConstraints maxHeight="375.0" minHeight="375.0" percentHeight="0.0" prefHeight="375.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="305.0" minHeight="305.0" percentHeight="0.0" prefHeight="305.0" vgrow="SOMETIMES" />
+                                <RowConstraints maxHeight="305.0" minHeight="305.0" percentHeight="0.0" prefHeight="305.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <padding>
-                                <Insets bottom="5.0" left="5.0" right="15.0" top="5.0" />
+                                <Insets bottom="5.0" left="5.0" right="20.0" top="5.0" />
                             </padding>
-                     <children>
-                        <Pane prefHeight="200.0" prefWidth="200.0" />
-                        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="370.0" prefWidth="300.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css">
-                            <children>
-                                <Pane layoutX="10.0" layoutY="14.0" prefHeight="282.0" prefWidth="280.0" style="-fx-background-color: #CCCCCC;" styleClass="image-view">
-                                    <children>
-                                    <AnchorPane layoutX="9.0" layoutY="10.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
-                                       <children>
-                                          <ImageView id="TopItems" fitHeight="128.0" fitWidth="133.0" layoutX="-1.0" pickOnBounds="true" preserveRatio="true" />
-                                       </children>
-                                    </AnchorPane>
-                                    <AnchorPane layoutX="146.0" layoutY="79.0" prefHeight="142.0" prefWidth="127.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
-                                       <children>
-                                          <ImageView fitHeight="150.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true" />
-                                       </children>
-                                    </AnchorPane>
-                                    <AnchorPane layoutX="9.0" layoutY="142.0" prefHeight="128.0" prefWidth="132.0" style="-fx-background-color: rgba(128, 128, 128, 0.3);">
-                                       <children>
-                                          <ImageView id="ShoeItems" fitHeight="128.0" fitWidth="131.0" pickOnBounds="true" preserveRatio="true" />
-                                       </children>
-                                    </AnchorPane>
-                                    </children>
-                                </Pane>
-                                <Pane layoutX="21.0" layoutY="305.0" prefHeight="56.0" prefWidth="259.0">
-                                    <children>
-                                        <TextField id="TitleOfTheOutfit" layoutY="12.0" prefHeight="30.0" prefWidth="201.0" promptText="FIt Name" styleClass="name-button" stylesheets="@../styles/ItemDisplay.css">
-                                            <font>
-                                                <Font name="System Bold" size="88.0" />
-                                            </font>
-                                    </TextField>
-                                        <Button id="DeleteButton" layoutX="216.0" layoutY="5.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="icon-button" stylesheets="@../styles/ItemDisplay.css" text="🗑">
-                                            <font>
-                                                <Font size="20.0" />
-                                            </font>
-                                        </Button>
-                                    </children>
-                                </Pane>
-                            </children>
-                        </AnchorPane>
-                     </children>
                         </GridPane>
                     </content>
                 </ScrollPane>
-                <GridPane id="filtergridpane" layoutX="-6.0" layoutY="10.0" prefHeight="30.0" prefWidth="1587.0">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                    <children>
-                        <MenuButton fx:id="styleDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="STYLE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                        <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="CATEGORY" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                        <MenuButton fx:id="colorDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="COLOR" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                        <Button mnemonicParsing="false" onAction="#goFavorites" prefHeight="34.0" prefWidth="149.0" styleClass="drop-select" text="FAVORITES" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                    </children>
-                </GridPane>
             </children>
         </AnchorPane>
    </center>
