--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -4,8 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -74,18 +72,18 @@
             </children>
         </AnchorPane>
     </top>
-   <center>
+    <center>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
                 <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" prefHeight="480.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" gridLinesVisible="true" hgap="15.0" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" fx:id="fitItemGRid" gridLinesVisible="true" hgap="15.0" vgap="10.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="203.0" minWidth="203.0" percentWidth="0.0" prefWidth="203.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="203.0" minWidth="203.0" percentWidth="0.0" prefWidth="203.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="203.0" minWidth="203.0" percentWidth="0.0" prefWidth="203.0" />
-                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="203.0" minWidth="203.0" percentWidth="0.0" prefWidth="203.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="203.0" minWidth="203.0" percentWidth="0.0" prefWidth="203.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
+                                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="205.0" minWidth="205.0" percentWidth="0.0" prefWidth="205.0" />
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints maxHeight="255.0" minHeight="255.0" percentHeight="0.0" prefHeight="255.0" vgrow="SOMETIMES" />
@@ -94,16 +92,10 @@
                             <padding>
                                 <Insets bottom="5.0" left="5.0" right="20.0" top="5.0" />
                             </padding>
-                     <effect>
-                        <InnerShadow />
-                     </effect>
                         </GridPane>
                     </content>
                 </ScrollPane>
             </children>
-         <effect>
-            <DropShadow />
-         </effect>
         </AnchorPane>
-   </center>
+    </center>
 </BorderPane>
