koriklayout of col-fitdia

--- a/src/main/resources/com/example/pilifitproject/styles/FitDialog.css
+++ b/src/main/resources/com/example/pilifitproject/styles/FitDialog.css
@@ -34,6 +34,16 @@
         -fx-border-width: 2px;
         -fx-padding: 10;
 }
+.view-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-radius: 8;
+    -fx-border-width: 2px;
+    -fx-background-radius: 8;
+    -fx-padding: 1 7;
+    -fx-font-size: 30px;
+    -fx-cursor: hand;
+}
 
 .view-button {
     -fx-background-color: transparent;
