--- a/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane fx:id="fitDialog" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="205.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="205.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.FitDialogController">
     <children>
         <Pane layoutX="8.0" layoutY="9.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="197.0" prefWidth="189.0" style="-fx-background-color: #CCCCCC;" styleClass="image-view">
             <children>
