--- a/src/main/resources/com/example/pilifitproject/view/AboutUs.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/AboutUs.fxml
@@ -3,25 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.effect.MotionBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="700.0" prefWidth="1280.0" stylesheets="@../styles/Home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.AboutController">
+<BorderPane prefHeight="700.0" prefWidth="1280.0" stylesheets="@../styles/AboutUs.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.AboutController">
    <center>
         <AnchorPane prefHeight="785.0" prefWidth="1445.0" BorderPane.alignment="CENTER">
             <children>
-            <ImageView fitHeight="845.0" fitWidth="1554.0" layoutX="-8.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="845.0" fitWidth="1554.0" layoutX="-8.0" pickOnBounds="true" preserveRatio="true" rotate="1.0">
                <image>
                   <Image url="@../images/background/Aboutbg.png" />
                </image>
+               <effect>
+                  <MotionBlur radius="38.85" />
+               </effect>
             </ImageView>
                 <GridPane layoutX="40.0" layoutY="17.0" prefHeight="30.0" prefWidth="233.0">
                     <columnConstraints>
@@ -38,27 +43,157 @@
                         <Button fx:id="AboutController" mnemonicParsing="false" onAction="#goAbout" prefHeight="26.0" prefWidth="126.0" styleClass="scene-switch" text="ABOUT" GridPane.columnIndex="1" />
                     </children>
                 </GridPane>
-            <Pane id="JustAboutBox" layoutX="185.0" layoutY="128.0" prefHeight="205.0" prefWidth="762.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);;" styleClass="tab-border">
-               <children>
-                  <Label layoutX="308.0" layoutY="16.0" prefHeight="51.0" prefWidth="193.0" styleClass="title-text" text="ABOUT US" textFill="WHITE">
-                     <font>
-                        <Font size="32.0" />
-                     </font>
-                     <effect>
-                        <Blend opacity="0.69" />
-                     </effect>
-                  </Label>
-                  <Label layoutX="19.0" layoutY="77.0" prefHeight="56.0" prefWidth="400.0" textAlignment="JUSTIFY" textFill="WHITE" />
-                  <Text fill="WHITE" layoutX="37.0" layoutY="100.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-filter2" text="Who We Are: At Pilifit, we're passionate about simplifying your daily routine—starting with your wardrobe. Founded by a team of fashion enthusiasts and tech innovators, our mission is to help you dress with confidence, ease, and style—every single day." textAlignment="JUSTIFY" wrappingWidth="696.0269165039062">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
-            <AnchorPane layoutX="1054.0" layoutY="133.0" prefHeight="180.0" prefWidth="178.0" style="-fx-background-color: rgba(200, 210, 230, 0.5);" />
-            <Pane id="FrameForVideo(Unsure)" layoutX="719.0" layoutY="391.0" prefHeight="326.0" prefWidth="528.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);" styleClass="tab-border" />
+            <Text fill="#cfcfcf" layoutX="93.0" layoutY="645.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-filter2" text="PiliFits was created by a team of first-year Computer Science students from National University Manila. We worked together from planning to development, applying what we’ve learned so far in design, coding, and system building. Each of us contributed in our own way, and even as beginners, we aimed to build something useful and creative. More than just a school project, PiliFits became a way for us to grow our skills and confidence while combining fashion and tech in a fun, practical app." textAlignment="JUSTIFY" wrappingWidth="572.8269653320312">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+            <Label layoutX="90.0" layoutY="66.0" prefHeight="109.0" prefWidth="652.0" styleClass="title-text" text="MEET OUR TEAM" textFill="#cfcfcf">
+               <font>
+                  <Font name="System Bold Italic" size="66.0" />
+               </font>
+               <effect>
+                  <Blend opacity="0.69" />
+               </effect>
+            </Label>
+            <ImageView fitHeight="465.0" fitWidth="470.0" layoutX="-77.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/cy.png" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="470.0" fitWidth="443.0" layoutX="91.0" layoutY="144.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/jean.png" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="440.0" fitWidth="448.0" layoutX="246.0" layoutY="208.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/jean.png" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="460.0" fitWidth="444.0" layoutX="397.0" layoutY="152.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/jean.png" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <Text fill="#cfcfcf" layoutX="89.0" layoutY="172.0" strokeLineCap="ROUND" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-filter2" text="People behind Project PiliFit" textAlignment="JUSTIFY" wrappingWidth="603.2269897460938">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <ImageView fitHeight="87.0" fitWidth="174.0" layoutX="932.0" layoutY="100.0" opacity="0.45" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D7.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="157.0" fitWidth="142.0" layoutX="1074.0" layoutY="169.0" opacity="0.39" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/us.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="191.0" fitWidth="281.0" layoutX="757.0" layoutY="159.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D7.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="260.0" fitWidth="376.0" layoutX="1026.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/us.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="190.0" fitWidth="137.0" layoutX="1161.0" layoutY="496.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D17.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow height="33.87" radius="15.557499999999997" width="30.36" />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="192.0" layoutX="1011.0" layoutY="472.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/OfficialLogo.png" />
+               </image>
+               <effect>
+                  <Glow level="1.0" />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="163.0" fitWidth="119.0" layoutX="1021.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D6.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="759.0" layoutY="370.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fitHeight="251.0" fitWidth="227.0" layoutX="828.0" layoutY="370.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D13.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow height="33.87" radius="15.557499999999997" width="30.36" />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="138.0" fitWidth="200.0" layoutX="1235.0" layoutY="77.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D12.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow height="33.87" radius="15.557499999999997" width="30.36" />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="132.0" fitWidth="181.0" layoutX="1314.0" layoutY="496.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D14.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow height="33.87" radius="15.557499999999997" width="30.36" />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="177.0" fitWidth="242.0" layoutX="912.0" layoutY="633.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D9.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow height="33.87" radius="15.557499999999997" width="30.36" />
+               </effect>
+            </ImageView>
+            <ImageView fitHeight="190.0" fitWidth="137.0" layoutX="1410.0" layoutY="228.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/D18.jpg" />
+               </image>
+               <effect>
+                  <InnerShadow height="33.87" radius="15.557499999999997" width="30.36" />
+               </effect>
+            </ImageView>
             </children>
         </AnchorPane>
    </center>
+   <effect>
+      <InnerShadow radius="24.0375" width="77.15" />
+   </effect>
 </BorderPane>
