--- a/src/main/resources/com/example/pilifitproject/view/ContactUs.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ContactUs.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.MotionBlur?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,10 +21,13 @@
     <center>
         <AnchorPane prefHeight="785.0" prefWidth="1445.0" BorderPane.alignment="CENTER">
             <children>
-                <ImageView fitHeight="845.0" fitWidth="1554.0" layoutX="-8.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="845.0" fitWidth="1554.0" layoutX="-7.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../images/background/Contactbg.png" />
                     </image>
+               <effect>
+                  <MotionBlur radius="31.2" />
+               </effect>
                 </ImageView>
             <Pane layoutX="184.0" layoutY="147.0" opacity="0.19" prefHeight="569.0" prefWidth="1163.0" styleClass="back-tab" />
                 <GridPane layoutX="40.0" layoutY="17.0" prefHeight="30.0" prefWidth="233.0">
